qt/gen_qwizard.h

typedef struct QAbstractButton QAbstractButton;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPixmap QPixmap;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
QWizard* QWizard_new(QWidget* parent);
QWizard* QWizard_new2();
QWizard* QWizard_new3(QWidget* parent, int flags);
QMetaObject* QWizard_metaObject(const QWizard* self);
void* QWizard_metacast(QWizard* self, const char* param1);
int QWizard_metacall(QWizard* self, int param1, int param2, void** param3);
struct miqt_string QWizard_tr(const char* s);
struct miqt_string QWizard_trUtf8(const char* s);
int QWizard_addPage(QWizard* self, QWizardPage* page);
void QWizard_setPage(QWizard* self, int id, QWizardPage* page);
void QWizard_removePage(QWizard* self, int id);
QWizardPage* QWizard_page(const QWizard* self, int id);
bool QWizard_hasVisitedPage(const QWizard* self, int id);
struct miqt_array /* of int */  QWizard_visitedPages(const QWizard* self);
struct miqt_array /* of int */  QWizard_visitedIds(const QWizard* self);
struct miqt_array /* of int */  QWizard_pageIds(const QWizard* self);
void QWizard_setStartId(QWizard* self, int id);
int QWizard_startId(const QWizard* self);
QWizardPage* QWizard_currentPage(const QWizard* self);
int QWizard_currentId(const QWizard* self);
bool QWizard_validateCurrentPage(QWizard* self);
int QWizard_nextId(const QWizard* self);
void QWizard_setField(QWizard* self, struct miqt_string name, QVariant* value);
QVariant* QWizard_field(const QWizard* self, struct miqt_string name);
void QWizard_setWizardStyle(QWizard* self, int style);
int QWizard_wizardStyle(const QWizard* self);
void QWizard_setOption(QWizard* self, int option);
bool QWizard_testOption(const QWizard* self, int option);
void QWizard_setOptions(QWizard* self, int options);
int QWizard_options(const QWizard* self);
void QWizard_setButtonText(QWizard* self, int which, struct miqt_string text);
struct miqt_string QWizard_buttonText(const QWizard* self, int which);
void QWizard_setButtonLayout(QWizard* self, struct miqt_array /* of int */  layout);
void QWizard_setButton(QWizard* self, int which, QAbstractButton* button);
QAbstractButton* QWizard_button(const QWizard* self, int which);
void QWizard_setTitleFormat(QWizard* self, int format);
int QWizard_titleFormat(const QWizard* self);
void QWizard_setSubTitleFormat(QWizard* self, int format);
int QWizard_subTitleFormat(const QWizard* self);
void QWizard_setPixmap(QWizard* self, int which, QPixmap* pixmap);
QPixmap* QWizard_pixmap(const QWizard* self, int which);
void QWizard_setSideWidget(QWizard* self, QWidget* widget);
QWidget* QWizard_sideWidget(const QWizard* self);
void QWizard_setDefaultProperty(QWizard* self, const char* className, const char* property, const char* changedSignal);
void QWizard_setVisible(QWizard* self, bool visible);
QSize* QWizard_sizeHint(const QWizard* self);
void QWizard_currentIdChanged(QWizard* self, int id);
void QWizard_connect_currentIdChanged(QWizard* self, intptr_t slot);
void QWizard_helpRequested(QWizard* self);
void QWizard_connect_helpRequested(QWizard* self, intptr_t slot);
void QWizard_customButtonClicked(QWizard* self, int which);
void QWizard_connect_customButtonClicked(QWizard* self, intptr_t slot);
void QWizard_pageAdded(QWizard* self, int id);
void QWizard_connect_pageAdded(QWizard* self, intptr_t slot);
void QWizard_pageRemoved(QWizard* self, int id);
void QWizard_connect_pageRemoved(QWizard* self, intptr_t slot);
void QWizard_back(QWizard* self);
void QWizard_next(QWizard* self);
void QWizard_restart(QWizard* self);
struct miqt_string QWizard_tr2(const char* s, const char* c);
struct miqt_string QWizard_tr3(const char* s, const char* c, int n);
struct miqt_string QWizard_trUtf82(const char* s, const char* c);
struct miqt_string QWizard_trUtf83(const char* s, const char* c, int n);
void QWizard_setOption2(QWizard* self, int option, bool on);
bool QWizard_override_virtual_metacall(void* self, intptr_t slot);
int QWizard_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QWizard_override_virtual_validateCurrentPage(void* self, intptr_t slot);
bool QWizard_virtualbase_validateCurrentPage(void* self);
bool QWizard_override_virtual_nextId(void* self, intptr_t slot);
int QWizard_virtualbase_nextId(const void* self);
bool QWizard_override_virtual_setVisible(void* self, intptr_t slot);
void QWizard_virtualbase_setVisible(void* self, bool visible);
bool QWizard_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QWizard_virtualbase_sizeHint(const void* self);
bool QWizard_override_virtual_event(void* self, intptr_t slot);
bool QWizard_virtualbase_event(void* self, QEvent* event);
bool QWizard_override_virtual_resizeEvent(void* self, intptr_t slot);
void QWizard_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QWizard_override_virtual_paintEvent(void* self, intptr_t slot);
void QWizard_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QWizard_override_virtual_done(void* self, intptr_t slot);
void QWizard_virtualbase_done(void* self, int result);
bool QWizard_override_virtual_initializePage(void* self, intptr_t slot);
void QWizard_virtualbase_initializePage(void* self, int id);
bool QWizard_override_virtual_cleanupPage(void* self, intptr_t slot);
void QWizard_virtualbase_cleanupPage(void* self, int id);
bool QWizard_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QWizard_virtualbase_minimumSizeHint(const void* self);
bool QWizard_override_virtual_open(void* self, intptr_t slot);
void QWizard_virtualbase_open(void* self);
bool QWizard_override_virtual_exec(void* self, intptr_t slot);
int QWizard_virtualbase_exec(void* self);
bool QWizard_override_virtual_accept(void* self, intptr_t slot);
void QWizard_virtualbase_accept(void* self);
bool QWizard_override_virtual_reject(void* self, intptr_t slot);
void QWizard_virtualbase_reject(void* self);
bool QWizard_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QWizard_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QWizard_override_virtual_closeEvent(void* self, intptr_t slot);
void QWizard_virtualbase_closeEvent(void* self, QCloseEvent* param1);
bool QWizard_override_virtual_showEvent(void* self, intptr_t slot);
void QWizard_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QWizard_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QWizard_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QWizard_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWizard_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QWizard_override_virtual_devType(void* self, intptr_t slot);
int QWizard_virtualbase_devType(const void* self);
bool QWizard_override_virtual_heightForWidth(void* self, intptr_t slot);
int QWizard_virtualbase_heightForWidth(const void* self, int param1);
bool QWizard_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QWizard_virtualbase_hasHeightForWidth(const void* self);
bool QWizard_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QWizard_virtualbase_paintEngine(const void* self);