qt/gen_qwizard.nim


proc fcQWizard_new(parent: pointer): ptr cQWizard {.importc: "QWizard_new".}
proc fcQWizard_new2(): ptr cQWizard {.importc: "QWizard_new2".}
proc fcQWizard_new3(parent: pointer, flags: cint): ptr cQWizard {.importc: "QWizard_new3".}
proc fcQWizard_metaObject(self: pointer, ): pointer {.importc: "QWizard_metaObject".}
proc fcQWizard_metacast(self: pointer, param1: cstring): pointer {.importc: "QWizard_metacast".}
proc fcQWizard_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWizard_metacall".}
proc fcQWizard_tr(s: cstring): struct_miqt_string {.importc: "QWizard_tr".}
proc fcQWizard_trUtf8(s: cstring): struct_miqt_string {.importc: "QWizard_trUtf8".}
proc fcQWizard_addPage(self: pointer, page: pointer): cint {.importc: "QWizard_addPage".}
proc fcQWizard_setPage(self: pointer, id: cint, page: pointer): void {.importc: "QWizard_setPage".}
proc fcQWizard_removePage(self: pointer, id: cint): void {.importc: "QWizard_removePage".}
proc fcQWizard_page(self: pointer, id: cint): pointer {.importc: "QWizard_page".}
proc fcQWizard_hasVisitedPage(self: pointer, id: cint): bool {.importc: "QWizard_hasVisitedPage".}
proc fcQWizard_visitedPages(self: pointer, ): struct_miqt_array {.importc: "QWizard_visitedPages".}
proc fcQWizard_visitedIds(self: pointer, ): struct_miqt_array {.importc: "QWizard_visitedIds".}
proc fcQWizard_pageIds(self: pointer, ): struct_miqt_array {.importc: "QWizard_pageIds".}
proc fcQWizard_setStartId(self: pointer, id: cint): void {.importc: "QWizard_setStartId".}
proc fcQWizard_startId(self: pointer, ): cint {.importc: "QWizard_startId".}
proc fcQWizard_currentPage(self: pointer, ): pointer {.importc: "QWizard_currentPage".}
proc fcQWizard_currentId(self: pointer, ): cint {.importc: "QWizard_currentId".}
proc fcQWizard_validateCurrentPage(self: pointer, ): bool {.importc: "QWizard_validateCurrentPage".}
proc fcQWizard_nextId(self: pointer, ): cint {.importc: "QWizard_nextId".}
proc fcQWizard_setField(self: pointer, name: struct_miqt_string, value: pointer): void {.importc: "QWizard_setField".}
proc fcQWizard_field(self: pointer, name: struct_miqt_string): pointer {.importc: "QWizard_field".}
proc fcQWizard_setWizardStyle(self: pointer, style: cint): void {.importc: "QWizard_setWizardStyle".}
proc fcQWizard_wizardStyle(self: pointer, ): cint {.importc: "QWizard_wizardStyle".}
proc fcQWizard_setOption(self: pointer, option: cint): void {.importc: "QWizard_setOption".}
proc fcQWizard_testOption(self: pointer, option: cint): bool {.importc: "QWizard_testOption".}
proc fcQWizard_setOptions(self: pointer, options: cint): void {.importc: "QWizard_setOptions".}
proc fcQWizard_options(self: pointer, ): cint {.importc: "QWizard_options".}
proc fcQWizard_setButtonText(self: pointer, which: cint, text: struct_miqt_string): void {.importc: "QWizard_setButtonText".}
proc fcQWizard_buttonText(self: pointer, which: cint): struct_miqt_string {.importc: "QWizard_buttonText".}
proc fcQWizard_setButtonLayout(self: pointer, layout: struct_miqt_array): void {.importc: "QWizard_setButtonLayout".}
proc fcQWizard_setButton(self: pointer, which: cint, button: pointer): void {.importc: "QWizard_setButton".}
proc fcQWizard_button(self: pointer, which: cint): pointer {.importc: "QWizard_button".}
proc fcQWizard_setTitleFormat(self: pointer, format: cint): void {.importc: "QWizard_setTitleFormat".}
proc fcQWizard_titleFormat(self: pointer, ): cint {.importc: "QWizard_titleFormat".}
proc fcQWizard_setSubTitleFormat(self: pointer, format: cint): void {.importc: "QWizard_setSubTitleFormat".}
proc fcQWizard_subTitleFormat(self: pointer, ): cint {.importc: "QWizard_subTitleFormat".}
proc fcQWizard_setPixmap(self: pointer, which: cint, pixmap: pointer): void {.importc: "QWizard_setPixmap".}
proc fcQWizard_pixmap(self: pointer, which: cint): pointer {.importc: "QWizard_pixmap".}
proc fcQWizard_setSideWidget(self: pointer, widget: pointer): void {.importc: "QWizard_setSideWidget".}
proc fcQWizard_sideWidget(self: pointer, ): pointer {.importc: "QWizard_sideWidget".}
proc fcQWizard_setDefaultProperty(self: pointer, className: cstring, property: cstring, changedSignal: cstring): void {.importc: "QWizard_setDefaultProperty".}
proc fcQWizard_setVisible(self: pointer, visible: bool): void {.importc: "QWizard_setVisible".}
proc fcQWizard_sizeHint(self: pointer, ): pointer {.importc: "QWizard_sizeHint".}
proc fcQWizard_currentIdChanged(self: pointer, id: cint): void {.importc: "QWizard_currentIdChanged".}
proc fQWizard_connect_currentIdChanged(self: pointer, slot: int) {.importc: "QWizard_connect_currentIdChanged".}
proc fcQWizard_helpRequested(self: pointer, ): void {.importc: "QWizard_helpRequested".}
proc fQWizard_connect_helpRequested(self: pointer, slot: int) {.importc: "QWizard_connect_helpRequested".}
proc fcQWizard_customButtonClicked(self: pointer, which: cint): void {.importc: "QWizard_customButtonClicked".}
proc fQWizard_connect_customButtonClicked(self: pointer, slot: int) {.importc: "QWizard_connect_customButtonClicked".}
proc fcQWizard_pageAdded(self: pointer, id: cint): void {.importc: "QWizard_pageAdded".}
proc fQWizard_connect_pageAdded(self: pointer, slot: int) {.importc: "QWizard_connect_pageAdded".}
proc fcQWizard_pageRemoved(self: pointer, id: cint): void {.importc: "QWizard_pageRemoved".}
proc fQWizard_connect_pageRemoved(self: pointer, slot: int) {.importc: "QWizard_connect_pageRemoved".}
proc fcQWizard_back(self: pointer, ): void {.importc: "QWizard_back".}
proc fcQWizard_next(self: pointer, ): void {.importc: "QWizard_next".}
proc fcQWizard_restart(self: pointer, ): void {.importc: "QWizard_restart".}
proc fcQWizard_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWizard_tr2".}
proc fcQWizard_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWizard_tr3".}
proc fcQWizard_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWizard_trUtf82".}
proc fcQWizard_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWizard_trUtf83".}
proc fcQWizard_setOption2(self: pointer, option: cint, on: bool): void {.importc: "QWizard_setOption2".}
proc fQWizard_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QWizard_virtualbase_metacall".}
proc fcQWizard_override_virtual_metacall(self: pointer, slot: int) {.importc: "QWizard_override_virtual_metacall".}
proc fQWizard_virtualbase_validateCurrentPage(self: pointer, ): bool{.importc: "QWizard_virtualbase_validateCurrentPage".}
proc fcQWizard_override_virtual_validateCurrentPage(self: pointer, slot: int) {.importc: "QWizard_override_virtual_validateCurrentPage".}
proc fQWizard_virtualbase_nextId(self: pointer, ): cint{.importc: "QWizard_virtualbase_nextId".}
proc fcQWizard_override_virtual_nextId(self: pointer, slot: int) {.importc: "QWizard_override_virtual_nextId".}
proc fQWizard_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QWizard_virtualbase_setVisible".}
proc fcQWizard_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QWizard_override_virtual_setVisible".}
proc fQWizard_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QWizard_virtualbase_sizeHint".}
proc fcQWizard_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QWizard_override_virtual_sizeHint".}
proc fQWizard_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QWizard_virtualbase_event".}
proc fcQWizard_override_virtual_event(self: pointer, slot: int) {.importc: "QWizard_override_virtual_event".}
proc fQWizard_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_resizeEvent".}
proc fcQWizard_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_resizeEvent".}
proc fQWizard_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_paintEvent".}
proc fcQWizard_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_paintEvent".}
proc fQWizard_virtualbase_done(self: pointer, resultVal: cint): void{.importc: "QWizard_virtualbase_done".}
proc fcQWizard_override_virtual_done(self: pointer, slot: int) {.importc: "QWizard_override_virtual_done".}
proc fQWizard_virtualbase_initializePage(self: pointer, id: cint): void{.importc: "QWizard_virtualbase_initializePage".}
proc fcQWizard_override_virtual_initializePage(self: pointer, slot: int) {.importc: "QWizard_override_virtual_initializePage".}
proc fQWizard_virtualbase_cleanupPage(self: pointer, id: cint): void{.importc: "QWizard_virtualbase_cleanupPage".}
proc fcQWizard_override_virtual_cleanupPage(self: pointer, slot: int) {.importc: "QWizard_override_virtual_cleanupPage".}
proc fQWizard_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QWizard_virtualbase_minimumSizeHint".}
proc fcQWizard_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QWizard_override_virtual_minimumSizeHint".}
proc fQWizard_virtualbase_open(self: pointer, ): void{.importc: "QWizard_virtualbase_open".}
proc fcQWizard_override_virtual_open(self: pointer, slot: int) {.importc: "QWizard_override_virtual_open".}
proc fQWizard_virtualbase_exec(self: pointer, ): cint{.importc: "QWizard_virtualbase_exec".}
proc fcQWizard_override_virtual_exec(self: pointer, slot: int) {.importc: "QWizard_override_virtual_exec".}
proc fQWizard_virtualbase_accept(self: pointer, ): void{.importc: "QWizard_virtualbase_accept".}
proc fcQWizard_override_virtual_accept(self: pointer, slot: int) {.importc: "QWizard_override_virtual_accept".}
proc fQWizard_virtualbase_reject(self: pointer, ): void{.importc: "QWizard_virtualbase_reject".}
proc fcQWizard_override_virtual_reject(self: pointer, slot: int) {.importc: "QWizard_override_virtual_reject".}
proc fQWizard_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QWizard_virtualbase_keyPressEvent".}
proc fcQWizard_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_keyPressEvent".}
proc fQWizard_virtualbase_closeEvent(self: pointer, param1: pointer): void{.importc: "QWizard_virtualbase_closeEvent".}
proc fcQWizard_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_closeEvent".}
proc fQWizard_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QWizard_virtualbase_showEvent".}
proc fcQWizard_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_showEvent".}
proc fQWizard_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QWizard_virtualbase_contextMenuEvent".}
proc fcQWizard_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_contextMenuEvent".}
proc fQWizard_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QWizard_virtualbase_eventFilter".}
proc fcQWizard_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWizard_override_virtual_eventFilter".}
proc fQWizard_virtualbase_devType(self: pointer, ): cint{.importc: "QWizard_virtualbase_devType".}
proc fcQWizard_override_virtual_devType(self: pointer, slot: int) {.importc: "QWizard_override_virtual_devType".}
proc fQWizard_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QWizard_virtualbase_heightForWidth".}
proc fcQWizard_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QWizard_override_virtual_heightForWidth".}
proc fQWizard_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QWizard_virtualbase_hasHeightForWidth".}
proc fcQWizard_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QWizard_override_virtual_hasHeightForWidth".}
proc fQWizard_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QWizard_virtualbase_paintEngine".}
proc fcQWizard_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QWizard_override_virtual_paintEngine".}
